--- a/package.json
+++ b/package.json
@@ -1,19 +1,35 @@
 {
   "name": "car-rental-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
+  "version": "0.1.0",
+  "description": "A Strapi application",
   "scripts": {
-    "dev":"nodemon server.js",
-    "start": "node server.js"
+    "develop": "strapi develop",
+    "start": "strapi start",
+    "build": "strapi build",
+    "strapi": "strapi"
   },
-  "author": "",
-  "license": "ISC",
+  "devDependencies": {},
   "dependencies": {
-    "express": "^4.18.3",
-    "firebase-admin": "^12.0.0"
+    "@strapi/strapi": "4.20.4",
+    "@strapi/plugin-users-permissions": "4.20.4",
+    "@strapi/plugin-i18n": "4.20.4",
+    "@strapi/plugin-cloud": "4.20.4",
+    "better-sqlite3": "8.6.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "5.3.4",
+    "styled-components": "5.3.3"
   },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
-  }
+  "author": {
+    "name": "A Strapi developer"
+  },
+  "strapi": {
+    "uuid": "c7ca0fe9-0456-400d-9d15-738b26754a1b"
+  },
+  "engines": {
+    "node": ">=18.0.0 <=20.x.x",
+    "npm": ">=6.0.0"
+  },
+  "license": "MIT"
 }
